MDEV-15356: tp_timeout_handler needs to call set_killed_no_mutex as it has the mutex

Regression introducted in c2118a08b144 where LOCK_thd_data was moveed
to LOCK_thd_kill